@@ -30,9 +30,29 @@ begin_import
 import|import
 name|java
 operator|.
+name|io
+operator|.
+name|IOException
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
 name|util
 operator|.
 name|ArrayList
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Arrays
 import|;
 end_import
 
@@ -792,6 +812,417 @@ name|length
 argument_list|)
 expr_stmt|;
 name|dir
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+block|}
+comment|// LUCENE-3382 -- make sure we get exception if the directory really does not exist.
+DECL|method|testNoDir
+specifier|public
+name|void
+name|testNoDir
+parameter_list|()
+throws|throws
+name|Throwable
+block|{
+name|Directory
+name|dir
+init|=
+operator|new
+name|NRTCachingDirectory
+argument_list|(
+name|newFSDirectory
+argument_list|(
+name|_TestUtil
+operator|.
+name|getTempDir
+argument_list|(
+literal|"doesnotexist"
+argument_list|)
+argument_list|)
+argument_list|,
+literal|2.0
+argument_list|,
+literal|25.0
+argument_list|)
+decl_stmt|;
+try|try
+block|{
+name|IndexReader
+operator|.
+name|open
+argument_list|(
+name|dir
+argument_list|,
+literal|true
+argument_list|)
+expr_stmt|;
+name|fail
+argument_list|(
+literal|"did not hit expected exception"
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|NoSuchDirectoryException
+name|nsde
+parameter_list|)
+block|{
+comment|// expected
+block|}
+name|dir
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+block|}
+comment|// LUCENE-3382 test that we can add a file, and then when we call list() we get it back
+DECL|method|testDirectoryFilter
+specifier|public
+name|void
+name|testDirectoryFilter
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+name|Directory
+name|dir
+init|=
+operator|new
+name|NRTCachingDirectory
+argument_list|(
+name|newFSDirectory
+argument_list|(
+name|_TestUtil
+operator|.
+name|getTempDir
+argument_list|(
+literal|"foo"
+argument_list|)
+argument_list|)
+argument_list|,
+literal|2.0
+argument_list|,
+literal|25.0
+argument_list|)
+decl_stmt|;
+name|String
+name|name
+init|=
+literal|"file"
+decl_stmt|;
+try|try
+block|{
+name|dir
+operator|.
+name|createOutput
+argument_list|(
+name|name
+argument_list|,
+name|newIOContext
+argument_list|(
+name|random
+argument_list|)
+argument_list|)
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|dir
+operator|.
+name|fileExists
+argument_list|(
+name|name
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|Arrays
+operator|.
+name|asList
+argument_list|(
+name|dir
+operator|.
+name|listAll
+argument_list|()
+argument_list|)
+operator|.
+name|contains
+argument_list|(
+name|name
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+finally|finally
+block|{
+name|dir
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+block|}
+block|}
+comment|// LUCENE-3382 test that delegate compound files correctly.
+DECL|method|testCompoundFileAppendTwice
+specifier|public
+name|void
+name|testCompoundFileAppendTwice
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+name|Directory
+name|newDir
+init|=
+operator|new
+name|NRTCachingDirectory
+argument_list|(
+name|newDirectory
+argument_list|()
+argument_list|,
+literal|2.0
+argument_list|,
+literal|25.0
+argument_list|)
+decl_stmt|;
+name|CompoundFileDirectory
+name|csw
+init|=
+name|newDir
+operator|.
+name|createCompoundOutput
+argument_list|(
+literal|"d.cfs"
+argument_list|,
+name|newIOContext
+argument_list|(
+name|random
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|createSequenceFile
+argument_list|(
+name|newDir
+argument_list|,
+literal|"d1"
+argument_list|,
+operator|(
+name|byte
+operator|)
+literal|0
+argument_list|,
+literal|15
+argument_list|)
+expr_stmt|;
+name|IndexOutput
+name|out
+init|=
+name|csw
+operator|.
+name|createOutput
+argument_list|(
+literal|"d.xyz"
+argument_list|,
+name|newIOContext
+argument_list|(
+name|random
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|out
+operator|.
+name|writeInt
+argument_list|(
+literal|0
+argument_list|)
+expr_stmt|;
+try|try
+block|{
+name|newDir
+operator|.
+name|copy
+argument_list|(
+name|csw
+argument_list|,
+literal|"d1"
+argument_list|,
+literal|"d1"
+argument_list|,
+name|newIOContext
+argument_list|(
+name|random
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|fail
+argument_list|(
+literal|"file does already exist"
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|IOException
+name|e
+parameter_list|)
+block|{
+comment|//
+block|}
+name|out
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|1
+argument_list|,
+name|csw
+operator|.
+name|listAll
+argument_list|()
+operator|.
+name|length
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"d.xyz"
+argument_list|,
+name|csw
+operator|.
+name|listAll
+argument_list|()
+index|[
+literal|0
+index|]
+argument_list|)
+expr_stmt|;
+name|csw
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|CompoundFileDirectory
+name|cfr
+init|=
+name|newDir
+operator|.
+name|openCompoundInput
+argument_list|(
+literal|"d.cfs"
+argument_list|,
+name|newIOContext
+argument_list|(
+name|random
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|1
+argument_list|,
+name|cfr
+operator|.
+name|listAll
+argument_list|()
+operator|.
+name|length
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"d.xyz"
+argument_list|,
+name|cfr
+operator|.
+name|listAll
+argument_list|()
+index|[
+literal|0
+index|]
+argument_list|)
+expr_stmt|;
+name|cfr
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|newDir
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+block|}
+comment|/** Creates a file of the specified size with sequential data. The first    *  byte is written as the start byte provided. All subsequent bytes are    *  computed as start + offset where offset is the number of the byte.    */
+DECL|method|createSequenceFile
+specifier|private
+name|void
+name|createSequenceFile
+parameter_list|(
+name|Directory
+name|dir
+parameter_list|,
+name|String
+name|name
+parameter_list|,
+name|byte
+name|start
+parameter_list|,
+name|int
+name|size
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+name|IndexOutput
+name|os
+init|=
+name|dir
+operator|.
+name|createOutput
+argument_list|(
+name|name
+argument_list|,
+name|newIOContext
+argument_list|(
+name|random
+argument_list|)
+argument_list|)
+decl_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+name|size
+condition|;
+name|i
+operator|++
+control|)
+block|{
+name|os
+operator|.
+name|writeByte
+argument_list|(
+name|start
+argument_list|)
+expr_stmt|;
+name|start
+operator|++
+expr_stmt|;
+block|}
+name|os
 operator|.
 name|close
 argument_list|()
